--- a/.github/workflows/docker-publish-react.yml
+++ b/.github/workflows/docker-publish-react.yml
@@ -25,6 +25,6 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/ilmio-admin:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/kz-ilmio-admin-front:latest
           build-args: |
             REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}
